package csheets.ui.sheet;

import csheets.ui.PopupHandler;

import javax.swing.*;
import java.awt.event.MouseEvent;

/**
 * Created by berme on 6/8/2016.
 */
public class SpreadSheetPopupHandler extends PopupHandler {
    public SpreadSheetPopupHandler() {
        super();
    }
}
